apps/kubewall/kubewall.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubewall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubewall
  template:
    metadata:
      labels:
        app: kubewall
    spec:
      containers:
        - name: kubewall
          image: kubewall
          ports:
            - containerPort: 7080
---
apiVersion: v1
kind: Service
metadata:
  name: kubewall
spec:
  selector:
    app: kubewall
  ports:
    - protocol: TCP
      port: 7080
      targetPort: 7080
