apps/kubewall/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app: kubewall-ingress
  name: kubewall
  namespace: kubewall
spec:
  rules:
    - host: kubewall.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: kubewall
                port:
                  number: 7080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kubewall.int.kyledev.co
      secretName: kubewall-kyledev-tls-prod
